Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14600

sanity-lfsck test_30: f0 is not recovered

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • None
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/84000ede-1df1-4f8f-90a0-44f5afc1ea05

      test_30 failed with the following error:

      stat: cannot stat '/mnt/lustre/d30.sanity-lfsck/foo/f0': No such file or directory
      (18) f0 is not recovered
      

      This only started failing on 2021-04-08, so is very likely a regression due to a recent landing.

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-lfsck test_30 - (18) f0 is not recovered

            adilger Andreas Dilger
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: