LU-14600 e2fsck: check trusted.link after linking inode

If the inode is not linked into the namespace, link it into
lost+found before checking the trusted.link xattr to get the
DNE link count.

Fixes: 6528bce00bea ("LU-11446 e2fsck: check trusted.link when fixing nlink")
Test-Parameters: testlist=sanity-lfsck
Signed-off-by: Andreas Dilger <adilger@whamcloud.com>
Change-Id: I447c1ce32f965311bfed1c08381928737dd9b02c
Reviewed-on: https://review.whamcloud.com/43324
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Li Dongyang <dongyangli@ddn.com>